# oceano-now-playing

./: .editorconfig  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  TESTING_SETUP.md  install.sh  oceano-mode  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  test_airplay_detection.py  uninstall.sh  update-pr.sh  update.sh
.githooks/: pre-push
.github/: copilot-instructions.md
docs/: AI_HANDOFF_PROMPT.md  GO_MIGRATION_PLAN.md  OCEANO_FORK_PLAN.md  vu-display-options.md
docs/adr/: 0001-websocket-mocking-strategy.md
src/: artwork_providers.py  config.py  media_player.py  moode.py  picore_player.py  renderer.py  spi-now-playing.py  volumio.py  vu_client.py
src/app/: main.py
src/artwork/: __init__.py  providers.py
src/media_players/: __init__.py  base.py  moode.py  oceano.py  oceano_analog.py  picore.py  state_file.py  volumio.py
tests/: README.md  __init__.py  conftest.py  test_artwork_providers.py  test_config.py  test_media_player.py  test_moode.py  test_oceano.py  test_picore_player.py  test_renderer.py  test_state_machine.py  test_volumio.py  test_vu_client.py
